# self-minimind

./: .gitignore  LICENSE  README.md  demo.py  eval.py  main.py  pyproject.toml
dataset/: lm_dataset.py
doc/: hot 100刷题.md  学习日志.md  训练及微调.md
model/: model.py  model_lora.py  self_minimind.py
trainer/: train_dpo.py  train_lora.py  train_pretrain.py  train_sft.py  trainer_utils.py
